--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 }
 
     public static $config = [
-        'name' => 'Home',
+        'name' => 'root',
         'multi' => 1,
         'accounts' => [
             [
